# nifi-observability

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  ENHANCEMENT_SUMMARY.md  KAFKA_REST_PROXY.md  LOG_COLLECTION.md  PROJECT_SUMMARY.md  PROVENANCE_FLOW.md  QUICKSTART.md  README.md  TESTING.md  start-backend.sh  start-frontend.sh  test_provenance.sh  test_provenance_with_token.sh
backend/: pyproject.toml  requirements.txt  test_connection.py
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/services/: grafana_client.py  nifi_client.py
backend/tests/: test_main.py  test_nifi_client.py
